feat: implement event handling between client and server with Socket.IO
Body:
Enhanced the project to support event communication between the client and server.

Server-side:

Emitted a "welcome" message to individual clients upon connection.
Broadcasted a "welcome" message to all connected clients when a new user joins.
Logged received messages from clients on the server.
Client-side:

Added an input field and button to send messages to the server.
Implemented event handling for server messages to display them in the console.
Cleaned up unused socket events for clarity.

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,7 +9,8 @@
 
 <body>
     <h1>funciona </h1>
-
+    <input type="text" id="message" />
+    <button id="button"> send message to Server</button>
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
 </body>
