feat(rooms): implement join and leave functionality with message broadcasting
Added a basic implementation of room management to explore join and leave behavior in Socket.IO.

- Introduced `join room` and `leave room` functionalities for users to switch between rooms dynamically.
- Cleaned up the project to simplify structure and created a small lab focused on understanding join and leave mechanics.
- Updated the frontend with buttons for room selection and a message input system for real-time communication within rooms.

This commit serves as a foundational experiment to understand room handling and message broadcasting.

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,14 @@
 
 <body>
 
-   <div id="circle"></div>
+    <ul class="rooms" id="rooms-container"></ul>
+
+    <div class="buttons-container" id="buttons-container"> </div>
+
+    <div class="send-form ">
+        <input type="text" id="input-send-message" class="input " placeholder="Escribe tu mensaje">
+        <button type="button" id="button-send-message" class="btn btn--success"> enviar mensaje</button>
+    </div>
 
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/index.js"></script>
