--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -1,19 +1,94 @@
-#circle {
+.rooms {
+    display: grid;
+    height: 80dvh;
+    background-color: #f1f1f1;
+    padding: 0.5em;
+    margin: 0;
+    gap: 0.5em;
+}
+
+.rooms__element {
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 20px;
+    gap: 5px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    height: 100%;
+    box-sizing: border-box;
+    position: relative;
+    flex-grow: 1;
+    flex-shrink: 0;
+}
+.rooms__element::before{
+    content: attr(title);
+    font-size: 1.5em;
+    font-weight: bold;
+    color: #007bff;
+}
+.rooms__element::after{
+    content: attr(title);
+    font-size: 0.9em;
+    font-weight: bold;
+    color: #ccc;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    display: block;
-    width: 50px;
-    height: 50px;
-    background: #67b8ff;
-    transform: translateX(-50%) translateY(-50%);
-    border-radius: 100%;
-    -webkit-border-radius: 100%;
-    -moz-border-radius: 100%;
-    -ms-border-radius: 100%;
-    -o-border-radius: 100%;
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -ms-transform: translateX(-50%) translateY(-50%);
-    -o-transform: translateX(-50%) translateY(-50%);
+    bottom: 4px;
+    right: 4px;
+}
+
+.buttons-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    gap: 10px;
+    margin-block: 20px;
+}
+
+.btn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.btn--secondary{
+    background-color: #6c757d;
+    color: #fff;
+}
+
+
+.btn--success {
+    background-color: #28a745;
+    color: #fff;
+}
+
+.send-form {
+    display: flex;
+    --margin: 1em;
+    width: calc(100dvw - var(--margin) * 2);
+    margin-inline: var(--margin);
+    gap: 1em;
+    flex-wrap: wrap;
+    justify-content: end;
+}
+
+.input {
+    width: min(calc(100dvw - 2em), 300px);
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+}
+
+.message{
+    width: 100%;
+    padding: 5px 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    margin: 0;
+    font-size: 16px;
 }
