feat(namespaces): add namespace selection and modular architecture for room management
Introduced namespaces (`teachers` and `students`) to improve separation of concerns and scalability.

- Implemented namespace selection at the connection level to distinguish between user groups dynamically.
- Refactored the project into a more modular architecture:
  - Added `routes.js` to handle namespace-specific connections.
  - Created a reusable `io.class.js` to manage socket events.
  - Modularized frontend logic into separate files (`elements.js` and `listeners.js`) for better maintainability.
- Updated the frontend to display the selected namespace and dynamically render buttons, rooms, and messages.
- Adjusted styles and added new elements like a namespace header for improved UI clarity.

This iteration focuses on practicing namespace implementation and a more complex architecture for future scalability.

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,6 +10,8 @@
 
 <body>
 
+    <h1> chat de <span id="name-space"> </span></h1>
+
     <ul class="rooms" id="rooms-container"></ul>
 
     <div class="buttons-container" id="buttons-container"> </div>
@@ -20,7 +22,7 @@
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/index.js"></script>
+    <script  type="module" src="/js/index.js"></script>
 </body>
 
 </html>
