feat(socket): add connection control and message dispatch validation
Implemented buttons to manage socket connection states: connect, disconnect, and send messages only when connected. Enhanced the server and client to handle and validate message dispatch based on the `connected` attribute. These updates ensure messages are sent only if the user is connected.

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
-
+    <button class="btn btn-secondary" id="send"> send to all clients conected</button>
+    <button class="btn btn-secondary" id="disconnect">Disconect</button>
+    <button class="btn btn-secondary" id="connect">Reconect</button>
 
 
     <script src="/socket.io/socket.io.js"></script>
-    <script  type="module" src="/js/index.js"></script>
+    <script type="module" src="/js/index.js"></script>
 </body>
 
 </html>
