--- a/src/views/index.html
+++ b/src/views/index.html
@@ -9,10 +9,7 @@
 </head>
 
 <body>
-    <button class="btn btn-secondary" id="send"> send to all clients conected</button>
-    <button class="btn btn-secondary" id="disconnect">Disconect</button>
-    <button class="btn btn-secondary" id="connect">Reconect</button>
-
+    <h1>middleware </h1>
 
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/js/index.js"></script>
